--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2024"
 miette = { version = "7", features = ["fancy"] }
 thiserror = "1"
 rand = "0.8.5"
+lalrpop-util = "0.20.2"
+regex = "1.10.4"
+
+[build-dependencies]
+lalrpop = "0.20.2"
